syntax = "proto3";

package api;

option go_package = "./api";

service LoggingService {
    rpc Log(LoggingMessage) returns(LoggingStatusResponse) {}
    rpc All(LoggingZeroRequest) returns(AllText) {}
}

message LoggingZeroRequest {}

message LoggingMessage {
  bytes id = 1;
  string text = 2;
}

message AllText {
  repeated string text = 1;
}

message LoggingStatusResponse {
  bool success = 1;
  string error_message = 2;
}
